--- a/index.html
+++ b/index.html
@@ -20,24 +20,43 @@
   <script id="lightsComponentTemplate" type="text/template">
     <div class="ha-component">
       <h2>Lights</h2>
-      <div id="rooms">List of rooms:</div>
+      <div>List of rooms:</div>
     </div>
   </script>
   <script id="lightsComponentRoomsTemplate" type="text/template">
-    <div class="ha-component ha-component__lights-room" id="{roomId}">
-      <label>{roomName}</label>
-      <input type="checkbox"></div>
+    <div class="ha-component ha-component__lights-room" id="{divLightRoomId}">
+      <label for="{inpLightStatus}">{roomName}</label>
+      <input type="checkbox" id="{inpLightStatus}" />
+    </div>
+  </script>
+  <!--Thermostat-->
+  <script id="thermostatComponentTemplate" type="text/template">
+    <div class="ha-component">
+      <h2>Thermostat</h2>
+      <div>List of rooms:</div>
+    </div>
+  </script>
+  <script id="thermostatComponentRoomsTemplate" type="text/template">
+    <div class="ha-component ha-component__thermostat-room" id="{divThermostatRoomId}">
+      <div>{roomName}</div>
+      <div>
+        <label for="{inpTemp}">Temperature: </label>
+        <input type="range" name="" id="{inpTemp}" min="10" max="40" value="0" />
+        <span id="{spnTemp}"></span><span> &deg;C</span>
+      </div>
     </div>
   </script>
 </head>
 <body>
-  <h1>Welcome to Home Automation App</h1>
-  <div id="container"></div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="app.js" type="text/javascript"></script>
-  <script src="home/views/home.view.js" type="text/javascript"></script>
-  <script src="lights/models/lights.model.js" type="text/javascript"></script>
-  <script src="lights/views/lights.view.js" type="text/javascript"></script>
-  <script src="router.js" type="text/javascript"></script>
+<h1>Welcome to Home Automation App</h1>
+<div id="container"></div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="app.js" type="text/javascript"></script>
+<script src="home/views/home.view.js" type="text/javascript"></script>
+<script src="lights/models/lights.model.js" type="text/javascript"></script>
+<script src="lights/views/lights.view.js" type="text/javascript"></script>
+<script src="thermostat/models/thermostat.model.js" type="text/javascript"></script>
+<script src="thermostat/views/thermostat.views.js" type="text/javascript"></script>
+<script src="router.js" type="text/javascript"></script>
 </body>
 </html>
