Refactored common (model,view) code to lib - model.js, view.js

--- a/index.html
+++ b/index.html
@@ -51,12 +51,17 @@
 <h1>Welcome to Home Automation App</h1>
 <div id="container"></div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="app.js" type="text/javascript"></script>
+<!-- framework -->
+<script src="lib/model.js" type="text/javascript"></script>
+<script src="lib/view.js" type="text/javascript"></script>
+<script src="lib/router.js" type="text/javascript"></script>
+<!-- components -->
 <script src="home/views/home.view.js" type="text/javascript"></script>
 <script src="lights/models/lights.model.js" type="text/javascript"></script>
 <script src="lights/views/lights.view.js" type="text/javascript"></script>
 <script src="thermostat/models/thermostat.model.js" type="text/javascript"></script>
 <script src="thermostat/views/thermostat.views.js" type="text/javascript"></script>
-<script src="router.js" type="text/javascript"></script>
+<!-- routes -->
+<script src="routes.js" type="text/javascript"></script>
 </body>
 </html>
